--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 	<link href="app.css" rel="stylesheet">
 	<!-- <link href="" rel="stylesheet"> -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 
 <body>
 
-  <header class="app-header">
-		<div class="flex-container">
-			<h1 class="flex-item-1x">Quiz Heading</h1>
-		</div>
+  <header class="app-header flex-container">
+		<h1>Science Quiz</h1>
   </header>
-
+	
   <main></main>
 	
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.js" crossorigin="anonymous"></script>
 	<script src="app.js"></script>
-  
 </body>
 
 </html>
